:sparkles: updated brand color

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,10 +15,10 @@
     --black: #000000;
     --background: var(--white);
     --foreground: var(--black);
-    --primary: #4f46e5;
-    --primary-light: #6366f1;
-    --secondary: #22c55e;
-    --secondary-light: #4ade80;
+    --primary: #3b82f6;
+    --primary-light: #93c5fd;
+    --secondary: #10b981;
+    --secondary-light: #86efac;
     --hover: #eab308;
     --hover-light: #fde047;
     --code: #e2e8f0;
@@ -32,11 +32,11 @@
     --black: #000000;
     --background: var(--black);
     --foreground: var(--white);
-    --primary: #4338ca;
-    --primary-light: #818cf8;
-    --secondary: #22c55e;
+    --primary: #2563eb;
+    --primary-light: #60a5fa;
+    --secondary: #16a34a;
     --secondary-light: #4ade80;
-    --hover: #facc15;
+    --hover: #eab308;
     --hover-light: #fde047;
     --code: #1e293b;
     --code-foreground: #f8fafc;
