--- a/styles/typography.css
+++ b/styles/typography.css
@@ -1,5 +1,3 @@
-
-
 h1 {
   font-size: var(--heading1);
   letter-spacing: -1.5px;
@@ -98,7 +96,7 @@ blockquote {
   margin: 10px 0px 10px 3px;
 }
 
-.post .remark-highlight {
+.post .hljs {
   margin: 20px 0px 20px 0px;
 }
 
@@ -107,8 +105,7 @@ blockquote {
 }
 
 .post code {
-  background-color: var(--code);
-  color: var(--code-foreground);
   padding: 3px 5px 3px 5px;
   margin: 0px 5px 0px 5px;
+  font-family: 'Fira Code', monospace;
 }
