--- a/styles/Section.module.scss
+++ b/styles/Section.module.scss
@@ -1,4 +1,4 @@
-
+@import "./variables.scss";
 
 .sectionSpacer {
   margin-top: 50px;
@@ -7,11 +7,11 @@
 .sectionContainer {
   padding: 20px;
   /* width: calc(96vw - 8px); */
-  border: 4px solid var(--secondary);
+  border: 4px solid $secondary;
   z-index: 1000;
 }
 
 .sectionTitle {
   text-align: right;
-  border-left: 3px solid var(--primary-light);
+  border-left: 3px solid $primary-light;
 }
