--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -1,5 +1,7 @@
+@import "./variables.scss";
+
 h1 {
-  font-size: var(--heading1);
+  font-size: $heading1;
   letter-spacing: -1.5px;
   font-weight: 300;
   line-height: 108px;
@@ -7,7 +9,7 @@ h1 {
 }
 
 h2 {
-  font-size: var(--heading2);
+  font-size: $heading2;
   letter-spacing: -0.5px;
   font-weight: 300;
   line-height: 72px;
@@ -15,7 +17,7 @@ h2 {
 }
 
 h3 {
-  font-size: var(--heading3);
+  font-size: $heading3;
   letter-spacing: 0px;
   font-weight: 400;
   line-height: 60px;
@@ -23,7 +25,7 @@ h3 {
 }
 
 h4 {
-  font-size: var(--heading4);
+  font-size: $heading4;
   letter-spacing: 0.25px;
   font-weight: 400;
   line-height: 48px;
@@ -31,7 +33,7 @@ h4 {
 }
 
 h5 {
-  font-size: var(--heading5);
+  font-size: $heading5;
   letter-spacing: 0px;
   font-weight: 400;
   line-height: 36px;
@@ -39,7 +41,7 @@ h5 {
 }
 
 h6 {
-  font-size: var(--heading6);
+  font-size: $heading6;
   letter-spacing: 0.15px;
   font-weight: 500;
   line-height: 33px;
@@ -47,7 +49,7 @@ h6 {
 }
 
 p {
-  font-size: var(--body1);
+  font-size: $body1;
   letter-spacing: 0.1px;
   font-weight: 400;
   line-height: 26px;
@@ -55,12 +57,12 @@ p {
 }
 
 hr {
-  border: 1px solid var(--hover);
+  border: 1px solid $hover;
   margin: 30px 0px 30px 0px;
 }
 
 blockquote {
-  border-left: 3px solid var(--primary);
+  border-left: 3px solid $primary;
   padding: 10px 0px 10px 20px;
   margin: 0px;
   font-style: italic;
