--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -52,10 +52,16 @@
   transform: scaleX(0);
   transform-origin: right;
 }
+
 .navigation:hover::after {
   transform: scaleX(1);
   transform-origin: left;
 }
+
+.mobileSlogan, .mobileSloganItem, .mobileSloganSlug {
+  display: none;
+}
+
 @media screen and (max-width: $break-sm) {
   .slogan,
   .sloganItem {
@@ -63,7 +69,7 @@
   }
 
   .titleContainer {
-    width: 100vw !important;
+    width: 100%;
   }
 
   .title {
@@ -84,5 +90,28 @@
 
   .navigationText {
     font-size: $heading6;
+  }
+
+  .navigationContainer {
+    width: calc(100% - 15px);
+  }
+
+  .mobileSlogan {
+    display: block;
+    padding: 10px;
+  }
+
+  .mobileSloganItem {
+    display: block;
+    margin: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 0.05rem;
+  }
+
+  .mobileSloganSlug {
+    display: inline-block;
+    margin-right: 5px;
   }
 }
