:sparkles: enabled PWA

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -109,5 +109,5 @@ blockquote {
 .post code {
   padding: 3px 5px 3px 5px;
   margin: 0px 5px 0px 5px;
-  font-family: 'Fira Code', monospace;
+  font-family: 'Ubuntu Mono', monospace;
 }
