--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -98,6 +98,10 @@ blockquote {
   margin: 10px 0px 10px 3px;
 }
 
+.post a {
+  color: $primary;
+}
+
 .post .hljs {
   margin: 20px 0px 20px 0px;
 }
