--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -17,8 +17,8 @@ $background: $white;
 $foreground: $black;
 $background-dark: $black;
 $foreground-dark: $white;
-$primary: #3b82f6;
-$primary-light: #93c5fd;
+$primary: #6366f1;
+$primary-light: #a5b4fc;
 $secondary: #10b981;
 $secondary-light: #86efac;
 $hover: #eab308;
