--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -38,27 +38,29 @@
   text-decoration: none;
   position: relative;
   color: $hover-light;
+
+  &::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 3px;
+    top: 100%;
+    left: 0;
+    background: $secondary;
+    transition: transform 0.5s;
+    transform: scaleX(0);
+    transform-origin: right;
+  }
+  
+  &:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+  }
 }
 
-.navigation::after {
-  position: absolute;
-  content: "";
-  width: 100%;
-  height: 3px;
-  top: 100%;
-  left: 0;
-  background: $secondary;
-  transition: transform 0.5s;
-  transform: scaleX(0);
-  transform-origin: right;
-}
-
-.navigation:hover::after {
-  transform: scaleX(1);
-  transform-origin: left;
-}
-
-.mobileSlogan, .mobileSloganItem, .mobileSloganSlug {
+.mobileSlogan,
+.mobileSloganItem,
+.mobileSloganSlug {
   display: none;
 }
 
