--- a/styles/Navbar.module.scss
+++ b/styles/Navbar.module.scss
@@ -25,6 +25,7 @@
   /* display: none; */
   opacity: 0%;
   position: absolute;
+  color: $white;
 }
 
 .link {
@@ -33,17 +34,17 @@
   color: $white;
   text-decoration: none;
   transition: all 0.3s;
-}
+  
+  &:hover {
+    background-color: $hover;
+    color: $black;
+    box-shadow: 3px 3px 0px $secondary;
+  }
 
-.link:hover {
-  background-color: $hover;
-  color: $black;
-  box-shadow: 3px 3px 0px $secondary;
-}
-
-.link:active {
-  box-shadow: none;
-  transform: translate(3px, 3px);
+  &:active {
+    box-shadow: none;
+    transform: translate(3px, 3px);
+  }
 }
 
 .linkItem {
@@ -56,7 +57,7 @@
 }
 
 .mobileNavbar {
-  display: none
+  display: none;
 }
 
 @media screen and (max-width: $break-sm) {
@@ -77,7 +78,8 @@
     display: inline-block;
   }
 
-  .linkItem, .link {
+  .linkItem,
+  .link {
     display: none;
   }
 
