:memo: updated documentation and updated config

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -7,6 +7,10 @@
   border-bottom: 4px solid $primary-light;
 }
 
+.footer a {
+  color: $primary;
+}
+
 @media (prefers-color-scheme: dark) {
   .footer {
     background-color: $background-dark;
