--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -1,5 +1,6 @@
 @import "./variables.scss";
 
+// Common normalize for headings and body texts
 h1 {
   font-size: $heading1;
   letter-spacing: -1.5px;
@@ -68,8 +69,7 @@ blockquote {
   font-style: italic;
 }
 
-/* Post rendering styles (like Tailwind `prose`) */
-
+// Post rendering styles (like Tailwind `prose`)
 .post h1 {
   margin: 30px 0px 30px 0px;
 }
