feat: added specific color for code blocks

--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -112,8 +112,9 @@ blockquote {
 
 .post code {
   padding: 3px 5px 3px 5px;
-  margin: 0px 5px 0px 5px;
   font-family: 'Ubuntu Mono', monospace;
+  background-color: $code-background;
+  color: $code-foreground;
 }
 
 
