--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -11,7 +11,7 @@
 }
 
 .navigationContainer {
-  width: 400px;
+  display: inline;
 }
 
 .sloganItem {
@@ -51,10 +51,16 @@
     transform: scaleX(0);
     transform-origin: right;
   }
-  
+
+  & .navigationText {
+    display: inline-block;
+    margin-right: 15px;
+  }
+
   &:hover::after {
     transform: scaleX(1);
     transform-origin: left;
+    margin-top: 5px;
   }
 }
 
