fix: updated default font size for all text

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,7 @@ body {
   font-family: "Roboto", Arial, sans-serif;
   background-color: $background;
   color: $foreground;
+  font-size: $body1;
 }
 
 a {
