--- a/components/Section/Section.module.scss
+++ b/components/Section/Section.module.scss
@@ -1,4 +1,4 @@
-@import "./variables.scss";
+@import "styles/variables.scss";
 
 .sectionSpacer {
   margin-top: 50px;
@@ -6,7 +6,6 @@
 
 .sectionContainer {
   padding: 20px;
-  /* width: calc(96vw - 8px); */
   border: 4px solid $secondary;
   z-index: 1000;
 }
