--- a/themes/simple/components/Navbar/Navbar.module.scss
+++ b/themes/simple/components/Navbar/Navbar.module.scss
@@ -28,7 +28,8 @@
   margin: 0px !important;
   font-size: 20px !important;
   font-weight: bold !important;
-  width: 100%;
+  width: 300px;
+  word-break: keep-all;
 }
 
 .links {
