--- a/themes/simple/styles/variables.scss
+++ b/themes/simple/styles/variables.scss
@@ -19,8 +19,8 @@ $heading2-md: 3.157rem;
 $heading3-md: 2.369rem;
 $heading4-md: 1.777rem;
 $heading5-md: 1.333rem;
-$body1-md: 1rem;
-$body2-md: 0.75rem;
+$body1-md: 18px;
+$body2-md: 16px;
 
 // Responsive breakpoints
 $break-sm: 576px;
@@ -46,7 +46,7 @@ $hover: #facc15;
 $hover-light: #fde047;
 $text-secondary: #475569;
 $text-secondary-dark: #94a3b8;
-$code-background: $gray;
+$code-background: #0D1117;
 $code-foreground: $white;
 $shadow: $slate;
 
